--- a/PBShop/Areas/Admin/Views/Shared/_LayoutManage.cshtml
+++ b/PBShop/Areas/Admin/Views/Shared/_LayoutManage.cshtml
@@ -66,7 +66,7 @@
                         <li>
                             <a href="#" class="nav-link px-0 align-middle">
                                 <i class="fs-4 bi-table"></i>
-                                <span class="ms-1 d-none d-sm-inline">Orders</span>
+                                <span class="ms-1 d-none d-sm-inline">Khác</span>
                             </a>
                         </li>
                         @*<li>
@@ -262,7 +262,7 @@
         <div class="hehe">
             dataa
         </div>*@
-    <script>
+<script>
         function DeleteProduct(id) {
              $.ajax({
             url: '@Url.Action("Delete", "Home")',
@@ -287,6 +287,21 @@
                 });
     };
 
+
+     @*$('.search-btn').on("click", function () {
+                var search = $("#sip").val();
+                $.ajax({
+            url: '@Url.Action("FindData", "Home")',
+            type: 'GET',
+                    data: { search: search },
+                    success: function (data) {
+                        alert("hehejeh");
+                     $(".table__container").html(data);
+                            }
+                });
+            });*@
+
+
     function ShowModal(id) {
              $.ajax({
             url: '@Url.Action("Modals", "Home")',
@@ -298,7 +313,7 @@
                             }
                 });
         };
-    </script>
+</script>
 
     @*<script>
         document.getElementById('imageInput').addEventListener('change', function () {
